# vision_ocr_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  task.txt
templates/: index.html
